Added API for self reporting
